2001-04-20  Correo Fernando-ruiz <correo@fernando-ruiz.com>

	* include/rtems/libio_.h, libc/chroot.c, libc/privateenv.c:
	Private environment and chroot() enhancements and fixes.  Comments:
	  + privateenv has been modified to let at chroot() to be more
	    POSIX like Sergei Organov recommended.
	  + A task owner lets that rtems_set_private_env() will be
	    called twice or more times.
	  + chroot() can be called without a previous
	    rtems_set_private_env(); (transpanrently)
	  + The second call of rtems_set_private_env() makes a internal
	    chroot("/") into global imfs_root.
	  + chroot() runs like chdir() without a previous chdir("/") with
	    the global root.
	  + The current directory can be in a wrong place like Linux and 
	    many other Unices.

2001-04-16      Joel Sherrill <joel@OARcorp.com>

	* include/rtc.h: New file.
	* include/Makefile.am: Updated to reflect above.

2001-02-06	Joel Sherrill <joel@OARcorp.com>

	* include/ioccom.h: Unreferenced and thus removed.

2001-02-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/zilog/Makefile.am, include/Makefile.am, 
	include/motorola/Makefile.am, include/sys/Makefile.am
	include/rtems/Makefile.am: Apply include_*HEADERS instead of
	H_FILES.

2001-01-26	Joel Sherrill <joel@OARcorp.com>

	* libc/chroot.c: Fixed naming problems.  Names were changed
	when the code this depends on was merged.

2001-01-25	Fernando Ruiz <fernando.ruiz@ctv.es>

	* Alternate email is correo@fernando-ruiz.com
	* libc/chroot.c: New file.
	* libc/Makefile.am: Reflect above.

2001-01-25	Fernando Ruiz <fernando.ruiz@ctv.es>

	* Alternate email is correo@fernando-ruiz.com
	* libc/privateenv.c: New file.
	* include/rtems/libio_.h, libc/Makefile.am, libc/base_fs.c, 
	libc/unmount.c: Moved default umask, current working directory,
	root, and links followed count into a structure "user environment"
	that can then be treated as a unit.  This enable giving unique
	copies of these to individual threads or collection of threads.
